--- a/package.json
+++ b/package.json
@@ -4,5 +4,21 @@
   "description": "An item tracker inspired by EmoTracker.",
   "author": "Zach Parks <zach@alliware.com> (https://zacheryparks.com/)",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "start": "nodemon --exec ts-node ."
+  },
+  "nodemonConfig": {
+    "ext": "js,ts,jsx,tsx,json"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.8.1",
+    "typescript": "^3.8.3"
+  }
 }
