--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
     "env": {
         "es6": true,
         "node": true,
-        "jest/globals": true
+        "jest": true
     },
     "extends": [
         "airbnb-base"
@@ -34,5 +34,9 @@
                 "extensions": [".js", ".jsx", ".ts", ".tsx"]
             }
         }
-    }
+    },
+    "ignorePatterns": [
+        "node_modules/",
+        "coverage/"
+    ]
 }
