--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test && npm run lint"
+      "pre-commit": "npm test -- --coverage && npm run lint"
     }
   },
   "nodemonConfig": {
     "ext": "js,ts,jsx,tsx,json"
   },
   "jest": {
-    "testMatch": [
-      "**/tests/**/?(*.)+(spec|test).+(ts|tsx|js|jsx)"
-    ],
-    "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest"
+    "testMatch": ["**/tests/**/?(*.)+(spec|test).+(ts|tsx|js|jsx)"],
+    "transform": { "^.+\\.(ts|tsx)$": "ts-jest" },
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": -10
+      }
     }
   },
   "devDependencies": {
