--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "ext": "js,ts,jsx,tsx,json"
   },
   "jest": {
-    "testMatch": ["**/tests/**/?(*.)+(spec|test).+(ts|tsx|js|jsx)"],
-    "transform": { "^.+\\.(ts|tsx)$": "ts-jest" },
+    "testMatch": [
+      "**/tests/**/?(*.)+(spec|test).+(ts|tsx|js|jsx)"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
     "coverageThreshold": {
       "global": {
         "branches": 80,
@@ -31,8 +35,10 @@
     }
   },
   "devDependencies": {
+    "@types/express": "^4.17.4",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.0",
+    "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "eslint": "^6.8.0",
@@ -42,8 +48,12 @@
     "husky": "^4.2.3",
     "jest": "^25.2.7",
     "nodemon": "^2.0.2",
+    "supertest": "^4.0.2",
     "ts-jest": "^25.3.1",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
