--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,8 @@
             "jsx": "never",
             "ts": "never",
             "tsx": "never"
-        }]
+        }],
+        "lines-between-class-members": "off"
     },
     "settings": {
         "import/resolver": {
