--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: node_js
 node_js:
   - 12
-  - lts/*
-  - node
 
 jobs:
   include:
     - stage: Produce Coverage
-      node_js: node
+      node_js: 12
       script: jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
